--- a/style.css
+++ b/style.css
@@ -1,49 +1,81 @@
+body,
+h3,
+h4,
+p {
+  color: #00203fff;
+}
 
 body {
-  font-family: Arial;
+  background-color: #efefe8ff;
 }
 
-
-.header {
-background-color: #f1f1f1;
-padding: 15px;
-text-align: center;
+.jumbotron {
+  background-color:grey;
 }
 
-* {
-  box-sizing: border-box;
+.r2a {
+  border: 1px solidgrey;
+  border-radius: 0.25rem;
+  padding-left: 1rem;
 }
 
-form.example input[type=text] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid grey;
-  float: left;
-  width: 80%;
-  background: #f1f1f1;
+.btn-primary {
+  background-color:grey;
 }
 
-form.example button{
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: grey;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none;
-  cursor: pointer;
+#buttons-view,
+#city-input {
+  margin-top: 1rem;
+  border: 1px solidgrey;
+  border-radius: 0.25rem;
 }
 
-form.example button:hover {
-  background:black;
+.list-group-item {
+  background-color: #efefe8ff;
 }
 
-form.example::after {
-  content: "";
-  clear: both;
-  display: table;
+.card {
+  background-color:grey;
 }
-h3{
 
+.card-body {
+  padding: 0.35rem;
+}
+
+.uvGreen {
+  background-color: lightgreen;
+  border-radius: 5px;
+}
+
+.uvYellow {
+  background-color: lightyellow;
+  border-radius: 5px;
+}
+
+.uvOrange {
+  background-color: lightsalmon;
+  border-radius: 5px;
+}
+
+.uvRed {
+  background-color: palevioletred;
+  border-radius: 5px;
+}
+
+.uvPurple {
+  background-color: violet;
+  border-radius: 5px;
+}
+
+img {
+  width: 15%;
+  height: 15%;
+}
+
+.card-text {
+  font-size: 10pt;
+}
+
+.forcast {
+  padding: 1rem;
 }
